# pfe

./: .env  main.py  package-lock.json  pyproject.toml
apps/core/: admin.py  constants.py  middleware.py  mixins.py  pagination.py  responses.py  signals.py  validators.py
apps/core/migrations/: 0001_initial.py
apps/olt_alerts/: models.py  urls.py
apps/olt_analytics/: urls.py
apps/olt_api/: urls.py  views.py
apps/olt_dashboard/: models.py  urls.py  views.py
apps/olt_inventory/: apps.py  models.py  serializers.py
apps/olt_monitoring/: admin.py  models.py  views.py
apps/users/: __init__.py  apps.py  filters.py  models.py  serializers.py  signals.py  views.py
config/: urls.py
config/settings/: base.py  development.py  jazzmin_settings.py
supervisionolt_backend_django/apps/core/: __init__.py  apps.py  exceptions.py  models.py  permissions.py  utils.py
supervisionolt_backend_django/apps/olt_alerts/: admin.py  serializers.py  views.py
supervisionolt_backend_django/apps/olt_analytics/: admin.py  models.py  serializers.py  views.py
supervisionolt_backend_django/apps/olt_api/: urls.py  views.py
supervisionolt_backend_django/apps/olt_inventory/: admin.py  apps.py  urls.py  views.py
supervisionolt_backend_django/apps/olt_monitoring/: serializers.py  urls.py
supervisionolt_backend_django/apps/users/: admin.py  authentication.py  urls.py  views.py
supervisionolt_backend_django/config/: urls.py
supervisionolt_frontend_vue/: package-lock.json  package.json
supervisionolt_frontend_vue/src/: App.vue  api.js  supervisionolt_back.code-workspace
(+4 files in other folders)
